[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "diskhash"
version = "1.0.0"
description = "Python bindings for libdiskhash disk-based hash table"
requires-python = ">=3.8"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
wheel.packages = ["python/diskhash"]
cmake.build-type = "Release"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
